Fixed body spacing issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -42,5 +42,9 @@
 }
 
 #title {
-  background-color: #FFB866
+  background-color: #FFB866;
+}
+
+body {
+  margin: 0;
 }
